http-http/ossm_HTTP/istio-system/gw-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-default-egress-nginx-http
  namespace: istio-system
spec:
  selector:
    istio: default-egress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - nginx.${OCP_APPS_DOMAIN}
