http-http/ossm_HTTP/istio-system/dr-egress-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-no-mtls-http
  namespace: istio-system
spec:
  host: nginx.${OCP_APPS_DOMAIN}
  exportTo:
    - .
  subsets:
  - name: nginx-no-mtls-origination
