http-http/ossm_HTTP/istio-system/se-nginx.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: nginx
  namespace: istio-system
spec:
  hosts:
  - nginx.${OCP_APPS_DOMAIN}
  ports:
  - number: 80
    name: http
    protocol: HTTP
  resolution: DNS
  location: MESH_EXTERNAL
